--- a/gen/Cargo.toml
+++ b/gen/Cargo.toml
@@ -1,10 +1,16 @@
 [package]
-name = "locode-extension-gen"
+name = "ileap-extension"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-schemars = "0.7.6"
+pact-data-model = { git = "ssh://git@github.com/sine-fdn/pact-data-model.git" }
+chrono = { version = "0.4", features = ["serde"] }
+schemars = { version = "0.8", features = ["chrono"] }
+serde = { version = "1.0.203", features = ["derive"]}
 serde_json = "1.0.96"
+rust_decimal = "1.35.0"
+rust_decimal_macros = "^1.20"
+regex = "1.10.4"
