--- a/gen/Cargo.toml
+++ b/gen/Cargo.toml
@@ -14,3 +14,5 @@ serde_json = "1.0.96"
 rust_decimal = "1.35.0"
 rust_decimal_macros = "^1.20"
 regex = "1.10.4"
+quickcheck = "1"
+quickcheck_macros = "1"
