--- a/.github/workflows/gen-test.yml
+++ b/.github/workflows/gen-test.yml
@@ -3,6 +3,16 @@ on: [push]
 name: CI
 
 jobs:
+  sqlite3_smoke_test:
+    name: SQLite3 smoke test
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: SQLITE3 Smoke Test
+        working-directory: ./sql-example
+        run: |
+          sqlite3 < ileap.sql
+
   build_and_test:
     name: Rust project
     runs-on: ubuntu-latest
