--- a/gen/Cargo.toml
+++ b/gen/Cargo.toml
@@ -9,8 +9,9 @@ edition = "2021"
 pact-data-model = { git = "https://github.com/sine-fdn/pact-data-model.git" }
 chrono = { version = "0.4", features = ["serde"] }
 schemars = { version = "0.8", features = ["chrono"] }
-serde = { version = "1.0.203", features = ["derive"]}
+serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.96"
 rust_decimal = "1.35.0"
 rust_decimal_macros = "^1.20"
 regex = "1.10.4"
+uuid = "1.1"
