--- a/gen/Cargo.toml
+++ b/gen/Cargo.toml
@@ -6,11 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-pact-data-model = { git = "https://github.com/sine-fdn/pact-data-model.git" }
+pact-data-model = { git = "https://github.com/sine-fdn/pact-data-model.git", branch = "cross-sectoral" }
 chrono = { version = "0.4", features = ["serde"] }
 schemars = { version = "0.8", features = ["chrono"] }
-serde = { version = "1.0.203", features = ["derive"]}
+serde = { version = "1.0.203", features = ["derive"] }
 serde_json = "1.0.96"
 rust_decimal = "1.35.0"
 rust_decimal_macros = "^1.20"
 regex = "1.10.4"
+uuid = { version = "1.8", features = ["v4", "serde"] }
