fix: mermaid not working
h/t https://github.com/mermaid-js/mermaid-cli/issues/730

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,4 +12,4 @@ jobs:
       - name: Install Bikeshed
         run: pip3 install bikeshed && bikeshed update
       - name: Build docs
-        run: make
+        run: aa-exec --profile=chrome make
