build: fix mermaid-cli call at CI-time

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install Bikeshed
         run: pip3 install bikeshed && bikeshed update
       - name: Build docs
-        run: make
+        run: aa-exec --profile=chrome make
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
